[package]
name = "browser-provisioning-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
vers-sdk = { git = "https://github.com/hdresearch/rust-sdk" }
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
serde_json = "1"
futures = "0.3"
